# ChangeLog for dev-libs/m17n-lib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/m17n-lib/ChangeLog,v 1.45 2009/05/27 16:55:40 matsuu Exp $

*m17n-lib-1.5.4 (27 May 2009)

  27 May 2009; MATSUU Takuto <matsuu@gentoo.org>
  -files/m17n-lib-1.0.2-typedef.diff, -files/m17n-lib-1.1.0-fpic.patch,
  -m17n-lib-1.2.0.ebuild, -m17n-lib-1.5.1.ebuild, +m17n-lib-1.5.4.ebuild:
  Version bumped. Removed old versions.

  05 Apr 2009; Raúl Porcel <armin76@gentoo.org> m17n-lib-1.5.3.ebuild:
  Add ~sh

  05 Jan 2009; Raúl Porcel <armin76@gentoo.org> m17n-lib-1.5.3.ebuild:
  Add ~arm

  20 Nov 2008; Brent Baude <ranger@gentoo.org> m17n-lib-1.5.2.ebuild:
  Marking m17n-lib-1.5.2 ppc64 for bug 244898

  18 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  m17n-lib-1.5.2.ebuild:
  ppc stable, bug #244898

  08 Nov 2008; Raúl Porcel <armin76@gentoo.org> m17n-lib-1.5.2.ebuild:
  alpha/ia64/sparc stable wrt #244898

  02 Nov 2008; Markus Meier <maekke@gentoo.org> m17n-lib-1.5.2.ebuild:
  amd64/x86 stable, bug #244898

*m17n-lib-1.5.3 (29 Oct 2008)

  29 Oct 2008; MATSUU Takuto <matsuu@gentoo.org> +m17n-lib-1.5.3.ebuild:
  Version bumped. Removed built_with_use.

*m17n-lib-1.5.2 (20 Aug 2008)

  20 Aug 2008; MATSUU Takuto <matsuu@gentoo.org> +m17n-lib-1.5.2.ebuild:
  Version bumped. Fixed dependency.

  20 Feb 2008; Raúl Porcel <armin76@gentoo.org> m17n-lib-1.5.1.ebuild:
  Add ~ia64 wrt #210411

*m17n-lib-1.5.1 (16 Feb 2008)

  16 Feb 2008; Ulrich Mueller <ulm@gentoo.org> +m17n-lib-1.5.1.ebuild:
  Version bump. Add dependency on x11-libs/libSM.

  22 Jul 2007; Hans de Graaff <graaff@gentoo.org> m17n-lib-1.2.0.ebuild,
  m17n-lib-1.3.3.ebuild, m17n-lib-1.3.4.ebuild:
  Drop virtual/x11 references.

  04 Feb 2007; Steve Dibb <beandog@gentoo.org> m17n-lib-1.3.3.ebuild:
  amd64 stable, bug 156872

*m17n-lib-1.3.4 (24 Dec 2006)

  24 Dec 2006; MATSUU Takuto <matsuu@gentoo.org> +m17n-lib-1.3.4.ebuild:
  Version bumped.
