@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/m17n-lib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/m17n-lib/ChangeLog,v 1.45 2009/05/27 16:55:40 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/m17n-lib/ChangeLog,v 1.46 2009/05/27 20:17:12 jer Exp $
+
+  27 May 2009; Jeroen Roovers <jer@gentoo.org> m17n-lib-1.5.2.ebuild:
+  Stable for HPPA (bug #244898).
 
 *m17n-lib-1.5.4 (27 May 2009)
 
